🚙⛸ Updates to the html

--- a/views/index.html
+++ b/views/index.html
@@ -51,8 +51,11 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="http://www.freecodecamp.com/">freeCodeCamp</a> | <a href="https://hyperdev.com/#!/remix/FCC_API_timestamp_bplate/8338be2-a353-4892-8a0d-6295e4f12eb5">Click here to Remix</a>
+          for <a href="https://learn.freecodecamp.org/apis-and-microservices/apis-and-microservices-projects/timestamp-microservice">API & Microservices projects from freecodecamp</a>
         </p>
+        <p>
+          by <a href="https://github.com/anuragphadke19">anuragphadke19</a> | code available @ <a href="https://github.com/anuragphadke19/timestamp-micro">anuragphadke19/timestamp-micro</a>
+        </p>        
       </div>
    </body>
 
